deploy/strip-prefix.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: front-end-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /app/
    forceSlash: true
