deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ng-fe
spec:
  selector:
    matchLabels:
      app: ng-fe
  template:
    metadata:
      labels:
        app: ng-fe
    spec:
      containers:
        - name: ng-fe
          image: jeffrygonzalez/docker-ng-demo:0.2.7
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
