deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ng-fe-service
spec:
  selector:
    app: ng-fe
  ports:
    - port: 80
